--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h3>These are a few of my works</h3>
     <hr>
     <a href="./public/Movie.html">Movie Rankings</a>
-    <img src="../0.1 Img/Movie rankings.png">
+    <img src="./assets/images/Movie rankings.png">
 <hr>
     <a href="./public/Bday.html">Birthday Invite</a>
-    <img src="../0.1 Img/2024-09-02 (2)y.png">
+    <img src="./assets/images/bffday.png">
 <hr>
     <a href="./public/about.html">About me</a>
     <a href="./public/contact.html">Contact Me</a>
